<resources>
    <string name="app_name">SpeechHint</string>
    <string name="select_file">Select File</string>
    <string name="load_google_file">Google Drive</string>
    <string name="enter_google_link">Enter link to Google Drive</string>
    <string name="enter_yandex_link">Enter link to Yandex.Disk</string>
    <string name="link_empty">Link can\'t be empty</string>
    <string name="load_local_file">Local file</string>
    <string name="load_yandex_file">Yandex.Disk</string>
    <string name="edit_word">Edit word</string>
    <string name="delete_word">Delete word</string>
    <string name="add_word_before">Add word before</string>
    <string name="add_word_after">Add word after</string>
    <string name="settings_ui">UI Settings</string>
    <string name="settings_theme_light">Light</string>
    <string name="settings_theme_dark">Dark</string>
    <string name="settings_text_scale">Text Scale</string>
    <string name="settings_highlight_string">Highlight String</string>
    <string name="settings_scroll">Scrolling</string>
    <string name="settings_use_autoscroll">Enable AutoScroll</string>
    <string name="settings_autoscroll_speed">AutoScroll Speed</string>
    <string name="settings_stt">Voice settings</string>
    <string name="settings_use_voice_detection">Enable Voice Detection</string>
    <string name="settings_before_buffer_size">Before Buffer Size</string>
    <string name="settings_after_buffer_size">After Buffer Size</string>
    <string name="settings_mirror_text">Mirror text</string>
    <string name="server_switch_server">Turn on server</string>
    <string name="settings_highlight_line">Line</string>
    <string name="settings_highlight_pointer">Pointer</string>
    <string name="settings_highlight_light_zone">Light zone</string>
    <string name="settings_highlight_follow">Highlight current word</string>
    <string name="settings_highlight_height">Highlight height</string>
    <string name="set_document_button">Set Document</string>
    <string name="paid_feature_header">This is paid feature</string>
    <string name="paid_feature_accept">Open shop</string>
    <string name="paid_feature_body">You can try it for first 7 days then buy forever</string>
    <string name="paid_feature_deny">Cancel</string>
    <string name="paid_feature_update_toast">Updating purchases, please wait</string>
</resources>