<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/uiConfigModule"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="8dp"
    android:orientation="vertical">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/uiConfigTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="@string/settings_ui"
        android:textSize="20sp"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/themeRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/lightThemeRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_theme_light" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/darkThemeRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_theme_dark" />
    </RadioGroup>

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/settings_text_scale" />

    <com.google.android.material.slider.Slider
        android:id="@+id/textScaleSlider"
        style="@style/Widget.App.Slider"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:valueFrom="0.0"
        android:valueTo="200.0" />

    <com.google.android.material.materialswitch.MaterialSwitch
        android:id="@+id/currentStringHighlightSwitch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_highlight_string" />

    <RadioGroup
        android:id="@+id/highlightRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/highlightLine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_highlight_line" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/highlightPointer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_highlight_pointer" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/highlightLightZone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_highlight_light_zone" />
    </RadioGroup>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/highlightHeightLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/settings_highlight_height" />

    <com.google.android.material.slider.Slider
        android:id="@+id/highlightHeightSlider"
        style="@style/Widget.App.Slider"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:valueFrom="0.0"
        android:valueTo="100.0" />


    <com.google.android.material.materialswitch.MaterialSwitch
        android:id="@+id/highlightFollowSwitch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_highlight_follow" />

    <com.google.android.material.materialswitch.MaterialSwitch
        android:id="@+id/mirrorTextSwitch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_mirror_text" />

</LinearLayout>
