<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_file_select"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="24dp">

    <Button
        android:id="@+id/button_load_local_file"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/load_local_file"
        android:layout_marginBottom="16dp"
        />

    <Button
        android:id="@+id/button_load_google_file"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/load_google_file"
        android:layout_marginBottom="16dp"
        />

    <Button
        android:id="@+id/button_load_yandex_file"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/load_yandex_file"
        />

</LinearLayout>