<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/sttConfigModule"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/sttConfigLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="@string/settings_stt"
        android:textSize="20sp"
        android:textStyle="bold" />

    <!-- STT Enabled -->
    <Switch
        android:id="@+id/sttEnabledSwitch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_use_voice_detection"
        android:layout_marginBottom="8dp"/>

    <!-- Before Buffer Size -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_before_buffer_size"
        android:layout_marginBottom="4dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="8dp">
        <SeekBar
            android:id="@+id/beforeBufferSizeSeekBar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:max="20"
            android:min="1"/>
        <TextView
            android:id="@+id/beforeBufferSizeValue"
            android:layout_width="46dp"
            android:layout_height="wrap_content"
            android:text="5"
            android:gravity="end"/>
    </LinearLayout>

    <!-- After Buffer Size -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_after_buffer_size"
        android:layout_marginBottom="4dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="8dp">
        <SeekBar
            android:id="@+id/afterBufferSizeSeekBar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:max="20"
            android:min="1"/>
        <TextView
            android:id="@+id/afterBufferSizeValue"
            android:layout_width="46dp"
            android:layout_height="wrap_content"
            android:text="10"
            android:gravity="end"/>
    </LinearLayout>
</LinearLayout>
